<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/gradient_bg"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgProfil"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/user"/>

                    <TextView
                        android:id="@+id/txtWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bine ai venit,"
                        android:textSize="30dp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/fredokaone"/>

                    <TextView
                        android:id="@+id/txtNumePacient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nume pacient"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_below="@id/txtWelcome">/</TextView>

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                tools:layout_editor_absoluteX="146dp"
                tools:layout_editor_absoluteY="99dp"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/viewSupporter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRecomandari"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:layout_constraintEnd_toStartOf="@id/cardCalendar"
                app:layout_constraintTop_toBottomOf="@id/viewSupporter"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/bicicleta"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/recomandari"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCalendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardRecomandari"
                app:layout_constraintTop_toBottomOf="@id/viewSupporter">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/calendar"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/calendar"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardParametrii"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:layout_constraintEnd_toStartOf="@id/cardAlarme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardRecomandari"
                app:layout_constraintBottom_toBottomOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ecg"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/parametrii"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAlarme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@id/cardParametrii"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardCalendar"
                app:layout_constraintBottom_toBottomOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/alarma"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/alarme"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>